# pyproject.toml

[tool.poetry]
name = "telegram-bot-python"
version = "0.1.0"
description = "A Telegram bot for generating promo codes"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28"
python-telegram-bot = "^13.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
